fix : small fix on cards to wrap on the right size

--- a/Booki/styles/main/hebergement/offers_main.css
+++ b/Booki/styles/main/hebergement/offers_main.css
@@ -5,7 +5,7 @@
 }
 .offers__main a {
   width: 30%;
-  min-width: 250px;
+  width: 260px;
   margin-right: 10px;
 }
 
